Modify h1 styles for wrapping behavior
Updated h1 styles to allow text wrapping.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       justify-content: center;
     }
     h1 {
-      font-size: clamp(1rem, 6vw, 2.5rem); /* responsive between 1rem–2.5rem */
-      margin-bottom: 0.5em;
-      white-space: nowrap; /* prevent wrapping */
+      font-size: clamp(1rem, 6vw, 2.5rem);
+      margin: 0 0 0.5em 0;
+      white-space: normal; /* allow wrapping if very narrow */
     }
     #dday {
       font-size: clamp(1.2rem, 8vw, 3rem); /* responsive between 1.2rem–3rem */
