--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       justify-content: center;  /* horizontal center */
       align-items: center;      /* vertical center */
       text-align: center;
-      overflow: hidden;
     }
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      line-height: 1.3;
     }
     h1 {
       font-size: clamp(1rem, 6vw, 2.5rem);
