Remove bottom margin from #dday element

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       font-size: clamp(1.2rem, 8vw, 3rem); /* responsive between 1.2rem–3rem */
       font-weight: bold;
       color: #00d084;
-      margin-bottom: 0.3em;
+      margin-bottom: 0;
       white-space: nowrap; /* keep D-day in one line */
     }
   </style>
