--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       line-height: 1.3;
     }
     h1 {
-      font-size: clamp(1rem, 6vw, 2.5rem);
-      margin: 0 0 0.5em 0;
-      white-space: normal; /* allow wrapping if very narrow */
+      font-size: clamp(1rem, 8vw, 2.5rem); /* responsive font */
+      white-space: nowrap;                 /* force single line */
+      overflow: hidden;                    /* hide any overflow */
+      margin-bottom: 0.5em;
     }
     #dday {
       font-size: clamp(1.2rem, 8vw, 3rem); /* responsive between 1.2rem–3rem */
