--- a/index.html
+++ b/index.html
@@ -5,37 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🎉We are getting married!💍🎉</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
+    body {
+      font-family: "Noto Sans", sans-serif;
       background: #0d1117;
       color: #e6edf3;
-      font-family: "Noto Sans", sans-serif;
-    }
-    body {
-      display: flex;
-      justify-content: center;  /* horizontal center */
-      align-items: center;      /* vertical center */
-      text-align: center;
-    }
-    .container {
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
-      line-height: 1.3;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+      overflow: hidden;
     }
     h1 {
-      font-size: clamp(1rem, 8vw, 2.5rem); /* responsive font */
-      white-space: nowrap;                 /* force single line */
-      overflow: hidden;                    /* hide any overflow */
+      font-size: clamp(1rem, 6vw, 2.5rem); /* responsive between 1rem–2.5rem */
       margin-bottom: 0.5em;
+      white-space: nowrap; /* prevent wrapping */
     }
     #dday {
       font-size: clamp(1.2rem, 8vw, 3rem); /* responsive between 1.2rem–3rem */
       font-weight: bold;
       color: #00d084;
-      margin-bottom: 0;
+      margin-bottom: 0.3em;
       white-space: nowrap; /* keep D-day in one line */
     }
   </style>
